Upgrade to java 21 (#10)
* Updated java to 21; unit test dependencies; lib-cli-base dependency; some java code modernized to latest java features

* Fixed an issue when listing a single file

* Improved tests

* Adaptations to framework - execution context is no longer a thing, output is directly flushed to System.out and System.err

* Version bumped to 1.1.0